Improved Sphinx templates

--- a/example/docs/_templates/module.rst.jinja
+++ b/example/docs/_templates/module.rst.jinja
@@ -8,12 +8,13 @@
 **Inheritance diagram:**
 
 .. inheritance-diagram:: {{ qualname }}
-	:include-subclasses:
+    :include-subclasses:
 
 **UML: qualname="{{qualname}}"**
 
 .. uml:: {{qualname}}
-	:caption: UML diagram of ``{{ qualname }}``
+    :classes:
+    :caption: UML diagram of ``{{ qualname }}``
 
 **API:**
 
